test/e2e/testdata/envoy-patch-policy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-envoy-patch-policy
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /epp
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyPatchPolicy
metadata:
  name: custom-response-patch-policy
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: same-namespace
  type: JSONPatch
  jsonPatches:
    - type: "type.googleapis.com/envoy.config.listener.v3.Listener"
      name: "gateway-conformance-infra/same-namespace/http"
      operation:
        op: add
        path: "/default_filter_chain/filters/0/typed_config/local_reply_config"
        value:
          mappers:
            - filter:
                status_code_filter:
                  comparison:
                    op: EQ
                    value:
                      default_value: 404
                      runtime_key: key_b
              status_code: 406
              body:
                inline_string: "not acceptable"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: epp-gateways
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-8080
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: epp-http
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: epp-gateways
      sectionName: http
  rules:
    - backendRefs:
        - name: infra-backend-v2
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /epp
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: epp-http-8080
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: epp-gateways
      sectionName: http-8080
  rules:
    - backendRefs:
        - name: infra-backend-v3
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /epp
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyPatchPolicy
metadata:
  name: custom-response-all-listeners
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: epp-gateways
  type: JSONPatch
  jsonPatches:
    - type: "type.googleapis.com/envoy.config.listener.v3.Listener"
      nameSelector:
        type: RegularExpression
        value: ".*"
      operation:
        op: add
        path: "/default_filter_chain/filters/0/typed_config/local_reply_config"
        value:
          mappers:
            - filter:
                status_code_filter:
                  comparison:
                    op: EQ
                    value:
                      default_value: 404
                      runtime_key: key_b
              status_code: 406
              body:
                inline_string: "not acceptable"
